# Ray_Trace_Engine

./: .gitignore
Ray_Trace_Engine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Project.sln  Ray_Trace_Engine.sln  Ray_Trace_Engine.vcxproj  Ray_Trace_Engine.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini  shaders.vcxproj  shaders.vcxproj.filters
Ray_Trace_Engine/Release/: vulkan_raytracing.xml
Ray_Trace_Engine/assets/gondola_proj/gondola_model/: gondola_model.blend  gondola_model.blend1
Ray_Trace_Engine/assets/gtp_misty_gta/: g_f_importexport_01.odd  gtp_misty.blend  gtp_misty.blend1  gtp_misty.gltf  u_f_y_taylor.odd
Ray_Trace_Engine/assets/gtp_misty_gta/g_f_importexport_01/: accs_000_u.mtl  accs_000_u.odr  accs_001_u.mtl  accs_001_u.odr  accs_002_u.mtl  accs_002_u.odr  accs_003_u.mtl  accs_003_u.odr  accs_004_u.mtl  accs_004_u.odr  g_f_importexport_01.skel  hair_000_u.mtl  hair_000_u.odr  hair_001_r.mtl  (+37 more)
Ray_Trace_Engine/assets/gtp_misty_gta_2.0/: gtp_gta_misty_2.0.blend  gtp_gta_misty_2.0.blend1  gtp_gta_misty_2.0.gltf
Ray_Trace_Engine/assets/gunther2/: gunther.blend  gunther.blend1
Ray_Trace_Engine/assets/models/: gunther - Shortcut.lnk
Ray_Trace_Engine/character_save/: model_path.json  newCharacter.json
Ray_Trace_Engine/header_files/: AccelerationStructures.hpp  Buffer.hpp  Camera.hpp  Commands.hpp  Complex_Scene.hpp  ComputeVertex.hpp  CoreBase.hpp  CoreDebug.hpp  CoreDevice.hpp  CoreExtensions.hpp  CoreSwapchain.hpp  CoreUI.hpp  CoreWindow.hpp  DefaultRenderer.hpp  Engine.hpp  EngineCore.hpp  Input.hpp  LoadingScreen.hpp  MainRenderer.hpp  ObjCreate.hpp  ObjectMouseSelect.hpp  Particle.hpp  RenderBase.hpp  Shader.hpp  ShaderBindingTable.hpp  Sphere.hpp  TFMaterial.hpp  TFModel.hpp  Texture.hpp  TextureLoader.hpp  Tools.hpp  Utilities_AS.hpp  Utilities_CreateObject.hpp  Utilities_EngCore.hpp  Utilities_EnumStringHelper.hpp  Utilities_Renderer.hpp  Utilities_UI.hpp  glTFAnimation.hpp  glTFModel.hpp  glTFShadows.hpp  (+10 more)
Ray_Trace_Engine/header_files/being/: Being.hpp  Player.hpp
Ray_Trace_Engine/header_files/core/: Commands.hpp  CoreExtensions.hpp  CoreUI.hpp  Save.hpp
Ray_Trace_Engine/header_files/gtp_ui/: Character_UI.hpp
Ray_Trace_Engine/header_files/imguiZMO/: imGuIZMOquat.h
Ray_Trace_Engine/header_files/json_hpp/: json.hpp
Ray_Trace_Engine/header_files/junk/: Build_Scene.hpp  Math_Compute.hpp  Multi_Model.hpp  RTObjects.hpp  Raytracing.hpp  TFMesh.hpp  TFNode.hpp  VulkanglTFModel.h  glTF_Compute.hpp  glTF_Reflections.hpp
Ray_Trace_Engine/junk/: TFModel.cpp  TFModel.hpp
Ray_Trace_Engine/shaders/: VVenkAnimationShadowMapping.vert  VVenkShadowMapping.vert  VVenkShadowMappingTanQuad.vert  a.spv  anyhit.rahit  build_scene_anyhit.rahit  build_scene_closesthit.rchit  build_scene_geometrytypes.glsl  build_scene_miss.rmiss  build_scene_raygen.rgen  closesthit.rchit  complex_scene_anyhit.rahit  complex_scene_geometrytypes.glsl  composition.frag  composition.vert  computeAnimation.frag  computeAnimation.vert  computeAnimationRead.frag  computeAnimationRead.vert  computeAnimationShader.comp  computeShader.comp  downsample.frag  downsampleSubpass1.frag  downsampleSubpass2.frag  downsampleSubpass3.frag  downsampleSubpass4.frag  finalBloom.frag  geometryLighting.frag  geometryLighting.vert  geometrytypes.glsl  gltfAnim2_closesthit.rchit  gltfAnim2_raygen.rgen  gltfAnim_raygen.rgen  gltfAnim_shadow.rmiss  gltf_reflections_anyhit.rahit  gltf_reflections_miss.rmiss  gltf_viewer_anyhit.rahit  gltf_viewer_closesthit.rchit  gltf_viewer_raygen.rgen  guiPipeline.frag  (+105 more)
Ray_Trace_Engine/shaders/build_scene/: build_scene_closesthit.rchit
Ray_Trace_Engine/shaders/complex_scene/: complex_scene_closesthit.rchit  complex_scene_raygen.rgen
Ray_Trace_Engine/shaders/glTFShadTex/: tfst_anyhit.rahit  tfst_geometrytypes.glsl
Ray_Trace_Engine/shaders/glTFanimation/: gltfAnim2_anyhit.rahit  gltfAnim_anyhit.rahit  gltfAnim_closesthit.rchit  gltfAnim_geometrytypes.glsl  gltfAnim_miss.rmiss
Ray_Trace_Engine/shaders/gltfViewer/: gltf_viewer_compute.comp
Ray_Trace_Engine/shaders/gltf_reflections/: gltf_reflections_closesthit.rchit  gltf_reflections_geometrytypes.glsl  gltf_reflections_raygen.rgen
Ray_Trace_Engine/shaders/math_compute/: math_compute.comp
Ray_Trace_Engine/shaders/multi_blas/: multi_blas_anyhit.rahit
Ray_Trace_Engine/shaders/multi_model/: multi_model_anyhit.rahit  multi_model_raygen.rgen
Ray_Trace_Engine/shaders/raytracingshadows/: rtshad_closesthit.rchit  rtshad_miss.rmiss
Ray_Trace_Engine/source_files/: AccelerationStructures.cpp  Buffer.cpp  Build_Scene.cpp  Camera.cpp  Commands.cpp  Complex_Scene.cpp  ComputeVertex.cpp  CoreBase.cpp  CoreDebug.cpp  CoreDevice.cpp  CoreExtensions.cpp  CoreSwapchain.cpp  CoreUI.cpp  CoreWindow.cpp  DefaultRenderer.cpp  Engine.cpp  EngineCore.cpp  EnumStringHelper.cpp  Input.cpp  LoadingScreen.cpp  MainRenderer.cpp  Multi_Model.cpp  ObjCreate.cpp  ObjectMouseSelect.cpp  Particle.cpp  Raytracing.cpp  RenderBase.cpp  Shader.cpp  ShaderBindingTable.cpp  Sphere.cpp  TFMaterial.cpp  Texture.cpp  TextureLoader.cpp  Tools.cpp  Utilities_AS.cpp  Utilities_CreateObject.cpp  Utilities_EngCore.cpp  Utilities_EnumStringHelper.cpp  Utilities_Renderer.cpp  Utilities_UI.cpp  (+14 more)
Ray_Trace_Engine/source_files/being/: Being.cpp  Player.cpp
Ray_Trace_Engine/source_files/core/: Commands.cpp  CoreDebug.cpp  CoreDevice.cpp  CoreExtensions.cpp  CoreUI.cpp  CoreWindow.cpp  EngineCore.cpp  Save.cpp
Ray_Trace_Engine/source_files/gtp_ui/: Character_UI.cpp
Ray_Trace_Engine/source_files/imguiFileDialogue/: ImGuiFileDialog.cpp
Ray_Trace_Engine/source_files/imguiZMO/: imGuIZMOquat.cpp
Ray_Trace_Engine/source_files/junk/: Build_Scene.cpp  Complex_Scene.cpp  Math_Compute.cpp  Multi_Model.cpp  RTObjects.cpp  Raytracing.cpp  TFMesh.cpp  TFModel.cpp  TFNode.cpp  VulkanglTFModel.cpp  glTFAnimation.cpp  glTFShadows.cpp  glTFTextured.cpp  glTF_Compute.cpp  glTF_Reflections.cpp  multi_blas.cpp
Ray_Trace_Engine/source_files/mainRendererCopy/: MainRenderer.cpp
(+210 files in other folders)
